--- a/functions/.eslintrc.json
+++ b/functions/.eslintrc.json
@@ -21,6 +21,7 @@
         "project": "./tsconfig.json"
     },
     "plugins": ["@typescript-eslint"],
+
     "rules": {
         "indent": [
             "warn",
@@ -33,16 +34,6 @@
         "arrow-parens": ["warn"],
         "object-curly-spacing": ["warn", "always"],
         "no-trailing-spaces": ["warn"],
-        "comma-dangle": [
-            "warn",
-            {
-                "arrays": "always-multiline",
-                "objects": "always-multiline",
-                "imports": "always-multiline",
-                "exports": "always-multiline",
-                "functions": "always-multiline"
-            }
-        ],
         "space-before-blocks": ["warn"],
         "keyword-spacing": ["warn"],
         "array-bracket-spacing": ["warn", "always"],
@@ -76,6 +67,9 @@
                 "next": "return"
             }
         ],
+        "comma-dangle": "off",
+        "@typescript-eslint/comma-dangle": "off",
+
         "no-multiple-empty-lines": [
             "warn",
             {
